Update model to gemini-3-pro for all Jules agents
This commit updates the `model` field in all prompt YAML files within
`prompts/google_jules/` to `gemini-3-pro`. This ensures that all
Jules agents (Architects, Engineers, QA, etc.) utilize the specified
Gemini model version.

- Impacted files: 17 prompt definitions in `prompts/google_jules/`
- Verification: Validated via text search and `check_prompts.py` script.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/prompts/google_jules/jules_api_scout.prompt.yaml
+++ b/prompts/google_jules/jules_api_scout.prompt.yaml
@@ -18,7 +18,7 @@ variables:
 - name: context
   description: The specific features or endpoints needed (e.g., Create Subscription).
   required: true
-model: gpt-4o
+model: gemini-3-pro
 modelParameters:
   temperature: 0.1
 messages:
