--- a/prompts/google_jules/jules_orchestrator.prompt.yaml
+++ b/prompts/google_jules/jules_orchestrator.prompt.yaml
@@ -17,7 +17,7 @@ variables:
 - name: context
   description: Additional context, codebase analysis, or documentation snippets.
   required: false
-model: gpt-4o
+model: gemini-3-pro
 modelParameters:
   temperature: 0.2
 messages:
