--- a/prompts/google_jules/jules_security_auditor.prompt.yaml
+++ b/prompts/google_jules/jules_security_auditor.prompt.yaml
@@ -18,7 +18,7 @@ variables:
 - name: context
   description: Additional context like threat model or specific security requirements.
   required: false
-model: gpt-4o
+model: gemini-3-pro
 modelParameters:
   temperature: 0.1
 messages:
