--- a/prompts/google_jules/jules_test_gen.prompt.yaml
+++ b/prompts/google_jules/jules_test_gen.prompt.yaml
@@ -14,7 +14,7 @@ variables:
 - name: target_files
   description: The list of source files to generate tests for.
   required: true
-model: gpt-4
+model: gemini-3-pro
 modelParameters:
   temperature: 0.2
 messages:
